# simpletasks-data

./: .gitignore  .travis.yml  README.md  mypy.ini  pyproject.toml  tox.ini
simpletasks_data/: __init__.py  formatting.py  helpers.py  importsource.py  importtask.py  mapping.py
tests/: formatting_test.py  helpers_test.py  importtask_test.py  mapping_columns_test.py
